--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "dev:server": "nodemon server/index.js"
   },
   "dependencies": {
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.21.1",
+    "@stripe/stripe-js": "^2.4.0",
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "framer-motion": "^10.16.4",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.344.0",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
-    "stripe": "^14.14.0",
-    "@stripe/stripe-js": "^2.4.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.21.1",
+    "stripe": "^14.14.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
