--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.21.1",
+    "socket.io-client": "^4.8.1",
     "stripe": "^14.14.0"
   },
   "devDependencies": {
