--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "dev:server": "nodemon server/index.js"
   },
   "dependencies": {
-    "@stripe/stripe-js": "^2.4.0",
     "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -23,12 +22,10 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.1.1",
-    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.21.1",
-    "socket.io-client": "^4.8.1",
-    "stripe": "^14.14.0"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
